# functional-geometry-gambit-scheme

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  notes.md
cmake/: CMakeDetermineGambitCompiler.cmake  CMakeGambitCompiler.cmake.in  CMakeGambitInformation.cmake  CMakeTestGambitCompiler.cmake
src/: CMakeLists.txt  combinators.scm  factorial.scm  fish.scm  main.scm  picture.scm  primitives.scm  raylib.scm  stratum0.scm  stratumminus1.scm  vector.scm
src/raylibbinding/: CMakeLists.txt  raylib-colors.scm  raylib-consts.scm  raylib.scm
src/raylibbinding/structs/: boneinfo.scm  camera.scm  camera2d.scm  color.scm  image.scm  material.scm  materialmap.scm  matrix.scm  mesh.scm  model.scm  modelanimation.scm  npatchinfo.scm  quaternion.scm  rectangle.scm  rendertexture.scm  shader.scm  texture.scm  transform.scm  vector2.scm  vector3.scm  vector4.scm
tests/: vector-tests.scm
